# tiny-screen-saver

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dialog.h  dialog.rc  main.c
